--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -158,7 +158,7 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -171,7 +171,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -184,7 +184,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -197,7 +197,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -210,7 +210,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -223,7 +223,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -236,7 +236,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -249,7 +249,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -262,7 +262,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -275,7 +275,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -305,7 +305,7 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -318,7 +318,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -331,7 +331,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -344,7 +344,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -357,7 +357,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -370,7 +370,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -383,7 +383,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -396,7 +396,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -409,7 +409,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -422,7 +422,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00 AM - 00:00 PM
+                                        00:00&nbsp;AM - 00:00&nbsp;PM
                                     </td>
                                     <td>
                                         <span class="h4">
