--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -63,12 +63,12 @@
                                 content_block__padded-top
                                 content_block__border-top">
                         <form class="form-l form-l__flush" method="get">
-                            <div class="form-l_col form-l_col-1-2">
+                            <div class="form-l_col form-l_col-1-3 form-group">
                                 <h2 class="form-label-header" for="">
                                     Calendar
                                 </h2>
-                                <div class="form-l form-l__flush">
-                                    <label class="form-l_col form-l_col-1-2">
+                                <!-- <div class="form-l form-l__flush"> -->
+                                    <label class="form-group_item">
                                         <input class="custom-input"
                                                type="checkbox"
                                                name="..."
@@ -77,7 +77,7 @@
                                                >
                                         Richard Cordray
                                     </label>
-                                    <label class="form-l_col form-l_col-1-2">
+                                    <label class="form-group_item">
                                         <input class="custom-input"
                                                type="checkbox"
                                                name="..."
@@ -86,9 +86,9 @@
                                                >
                                         Steven Antonakes
                                     </label>
-                                </div>
+                                <!-- </div> -->
                             </div>
-                            <div class="form-l_col form-l_col-1-2">
+                            <div class="form-l_col form-l_col-1-3">
                                 <div id="calendar_date_range-container">
                                     <label for="calendar_date_range">
                                         <h2 class="form-label-header" for="">
@@ -108,9 +108,8 @@
                                          </h2>
                                      </label>
                                     <div class="input-group">
-                                        <div class="input-group_item custom-select">
-                                            <select class="form-input-month"
-                                                    id="claendar_date_range_month">
+                                        <div class="input-group_item custom-select custom-select__month">
+                                            <select id="claendar_date_range_month">
                                                 <option value="">Month</option>
                                                 <option value="01">Jan</option>
                                                 <option value="02">Feb</option>
@@ -127,9 +126,8 @@
                                             </select>
                                             <span class="custom-select_icon cf-icon cf-icon-down"></span>
                                         </div>
-                                        <div class="input-group_item custom-select">
-                                            <select class="form-input_year"
-                                                    id="claendar_date_range_year">
+                                        <div class="input-group_item custom-select custom-select__year">
+                                            <select id="claendar_date_range_year">
                                                 <option value="">Year</option>
                                             {%- for year in range(2011, current_date|date("%Y")|int + 1) -%}
                                                 <option value="{{ year }}">{{ year }}</option>
