--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -287,7 +287,7 @@
                             </tbody>
                         </table>
 
-                        <table class="u-w100pct">
+                        <table class="u-w100pct content_block">
                             <colgroup>
                                 <col class="u-w25pct">
                                 <col class="u-w25pct">
