Adds links that were previously not around.

--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -165,7 +165,8 @@
                                 <h1 class="contact-person_name">Richard Cordray</h1>
                                 <ul class="list list__links">
                                     <li class="list_item">
-                                        <a class="list_link jump-link" href="#">
+                                        <a class="list_link jump-link"
+                                           href="/the-bureau/about-rich-cordray/">
                                             Biography
                                         </a>
                                     </li>
@@ -193,7 +194,8 @@
                                 <h1 class="contact-person_name">Steve Antonakes</h1>
                                 <ul class="list list__links">
                                     <li class="list_item">
-                                        <a class="list_link jump-link" href="#">
+                                        <a class="list_link jump-link"
+                                           href="/the-bureau/about-steve-antonakes/">
                                             Biography
                                         </a>
                                     </li>
@@ -214,7 +216,8 @@
 
                         </div><!-- END .content-l -->
 
-                        <a class="jump-link jump-link__large" href="#" data-icon="right">
+                        <a class="jump-link jump-link__large"
+                           href="/the-bureau/bureau-structure/">
                             Find out more about our leadership
                         </a>
 
@@ -239,7 +242,8 @@
 
                         </div><!-- END .content-l -->
 
-                        <a class="jump-link jump-link__large" href="https://cfpb.github.io/design-manual/identity/logo/">
+                        <a class="jump-link jump-link__large"
+                           href="https://cfpb.github.io/design-manual/identity/logo/">
                             Logo files and more in the CFPB Design Manual
                         </a>
 
