--- a/the-bureau/history/index.html
+++ b/the-bureau/history/index.html
@@ -33,7 +33,7 @@
         <div class="wrapper content_wrapper">
 
             <aside class="content_sidebar content__flush-all-on-small">
-                {% include "nav.html" %}
+                {% include "_the-bureau-nav.html" %}
             </aside>
 
             <div class="content_main content__flush-top-on-small">
@@ -76,9 +76,10 @@
 
                         <div class="expandable
                                     expandable__padded
-                                    content_block__flush-sides
                                     history-expandable">
+
                             <div class="expandable_content">
+                                <div class="history_timeline">
 
                     {# Run a query for the first item in this section to get the starting year. #}
                     {% set first = query.search_with_url_arguments(q="parent:{}".format(section.id),
@@ -91,54 +92,56 @@
                         {% if vars.update({'current_year': history.date|date("%Y")|int}) %} {% endif %}
                     {% endfor %}
                     
-                                <h2 class="history_year">{{ vars.current_year }}</h2>
+                                    <h2 class="history_year">{{ vars.current_year }}</h2>
 
-                                <ol class="history_list">
+                                    <ol class="history_list">
 
                     {% set histories = query.search_with_url_arguments(q="parent:{}".format(section.id)) %}
                     {% for history in histories %}
                         {% if history.date|date("%Y")|int < vars.current_year %}
                             {% if vars.update({'current_year': history.date|date("%Y")|int}) %} {% endif %}
-                                </ol>
+                                    </ol>
 
-                                <h2 class="history_year">{{ vars.current_year }}</h2>
+                                    <h2 class="history_year">{{ vars.current_year }}</h2>
 
-                                <ol class="history_list">
+                                    <ol class="history_list">
                         {% endif %}
-                                    <li class="history_item expandable expandable__padded">
-                                        <button class="expandable_header expandable_target">
-                                            <span class="expandable_header-right expandable_link">
-                                                <span class="expandable_cue-open">
-                                                    Show
-                                                    <span class="cf-icon cf-icon-plus-round"></span>
+                                        <li class="history_item expandable expandable__padded">
+                                            <button class="expandable_header expandable_target">
+                                                <span class="expandable_header-right expandable_link">
+                                                    <span class="expandable_cue-open">
+                                                        Show
+                                                        <span class="cf-icon cf-icon-plus-round"></span>
+                                                    </span>
+                                                    <span class="expandable_cue-close">
+                                                        Hide
+                                                        <span class="cf-icon cf-icon-minus-round"></span>
+                                                    </span>
                                                 </span>
-                                                <span class="expandable_cue-close">
-                                                    Hide
-                                                    <span class="cf-icon cf-icon-minus-round"></span>
-                                                </span>
-                                            </span>
-                                            <h3 class="expandable_header-left
-                                                         history_item_title">
-                                                <span class="history_item_date">
-                                                    {{ history.item_date if history.item_date
-                                                       else history.date|date("%b %d, %Y") }}
-                                                </span>
-                                                {{ history.title|safe }}
-                                            </h3>
-                                        </button>
-                                        <div class="expandable_content">
-                                        {% if history.thumbnail.images %}
-                                            <figure class="content-l_col content-l_col-1-3">
-                                                <img src="{{ history.thumbnail.images.full.url }}"
-                                                     alt="{{ history.thumbnail.alt_text }}"
-                                                     width="150">
-                                            </figure>
-                                        {% endif %}
-                                            {{ history.content|safe }}
-                                        </div>
-                                    </li>
+                                                <h3 class="expandable_header-left
+                                                             history_item_title">
+                                                    <span class="history_item_date">
+                                                        {{ history.item_date if history.item_date
+                                                           else history.date|date("%b %d, %Y") }}
+                                                    </span>
+                                                    {{ history.title|safe }}
+                                                </h3>
+                                            </button>
+                                            <div class="expandable_content">
+                                            {% if history.thumbnail.images %}
+                                                <figure class="content-l_col content-l_col-1-3">
+                                                    <img src="{{ history.thumbnail.images.full.url }}"
+                                                         alt="{{ history.thumbnail.alt_text }}"
+                                                         width="150">
+                                                </figure>
+                                            {% endif %}
+                                                {{ history.content|safe }}
+                                            </div>
+                                        </li>
                     {% endfor %}
+                                    </ol><!-- END .history_list -->
 
+                                </div><!-- END .history_timeline -->
                             </div><!-- END .history-expandable .expandable_content -->
 
                             <button class="expandable_header expandable_target">
