--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -516,7 +516,7 @@
                                         </a>
                                     </li>
                                     <li class="list_item">
-                                        <a href="#" class="list_link">
+                                        <a href="http://www.consumerfinance.gov/open/" class="list_link">
                                             Open government
                                         </a>
                                     </li>
