Adds vertical align and updates time formatting.

--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -156,7 +156,7 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -169,7 +169,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -182,7 +182,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -195,7 +195,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -208,7 +208,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -221,7 +221,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -234,7 +234,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -247,7 +247,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -260,7 +260,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -273,7 +273,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -303,7 +303,7 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -316,7 +316,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -329,7 +329,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -342,7 +342,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -355,7 +355,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -368,7 +368,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -381,7 +381,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -394,7 +394,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -407,7 +407,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
@@ -420,7 +420,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        00:00&nbsp;AM - 00:00&nbsp;PM
+                                        00:00&nbsp;a.m. &ndash; 00:00&nbsp;p.m.
                                     </td>
                                     <td>
                                         <span class="h4">
